--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "validator": "^12.1.0",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
